<resources>
    <string name="app_name">Quiz</string>
    <string name="main_text">Welcome to Quiz</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">NEXT</string>
    <string name="quit">QUIT</string>
    <string name="tryAgain">TRY AGAIN</string>
</resources>
