<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myapp2.mihir.quiz.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_text"
        android:id="@+id/display_question"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:textColor="#009688"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/display_question"
        android:paddingTop="10dp"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:id="@+id/answer_group">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:id="@+id/option1"
                android:textColor="@android:color/holo_blue_dark" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:id="@+id/option2"
                android:textColor="@android:color/holo_blue_dark" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:id="@+id/option3"
                android:textColor="@android:color/holo_blue_dark" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_4"
                android:id="@+id/option4"
                android:textColor="@android:color/holo_blue_dark" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next_btn"
            android:textColor="#ffffff"
            android:background="#009688" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:id="@+id/quit_btn"
            android:textColor="#ffffff"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tryAgain"
            android:id="@+id/try_btn"
            android:layout_marginTop="20dp"
            android:background="#ffeb3b"
            android:textColor="#bf360c"
            android:visibility="gone"        />
    </LinearLayout>

</RelativeLayout>
